Refactoring template and including some useful wait helpers

--- a/ui-test-template.csproj
+++ b/ui-test-template.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.3.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +24,7 @@
     <None Remove="NUnit3TestAdapter" />
     <None Remove="NUnit.ConsoleRunner" />
     <None Remove="System.Configuration.ConfigurationManager" />
+    <None Remove="SeleniumExtras.WaitHelpers" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pages\" />
